--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ PORT=5000
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
-DB_PASS=password_anda
-DB_NAME=siakad_db
+DB_PASS=akunpg
+DB_NAME=siakad-misns-api
