--- a/.env
+++ b/.env
@@ -1,9 +1,18 @@
-# Port untuk server Express
-PORT=5000
+# Server
+NODE_ENV=development
+PORT=3000
 
-# Konfigurasi Database PostgreSQL
+# Database PostgreSQL
+DB_NAME=siakad-misns-api
+DB_USER=postgres
+DB_PASSWORD=akunpg
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=postgres
-DB_PASS=akunpg
-DB_NAME=siakad-misns-api
+DB_SSL=false
+
+# JWT
+JWT_SECRET=your_jwt_secret_key_here
+JWT_EXPIRES_IN=7d
+
+# CORS
+CORS_ORIGIN=http://localhost:3001
