--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ PORT=3000
 # Database PostgreSQL
 DB_NAME=siakad-misns-api
 DB_USER=postgres
-DB_PASSWORD=akunpg
+DB_PASSWORD=postgres
 DB_HOST=localhost
 DB_PORT=5432
 DB_SSL=false
