--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "siakad-misns-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server .js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "db:sync": "node utils/databaseSync.js",
-    "db:reset": "node utils/databaseReset.js"
+    "db:reset": "node utils/databaseReset.js",
+    "sequelize": "sequelize"
   },
   "keywords": [],
   "author": "",
